--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav class="mobile-menu">
-            <img src="/img/lendmnlogo.svg" alt="" class="logo">
-            <input class="checkbox-menu" type="checkbox" id="check">
-            <label class="check" for="check">
-            <div class="bars">
-                <span class="line"></span>
-            </div>
-            </label>
-        </nav>
-    </header>
+
+    <div class="container" > 
+        <div class="image">
+            <img src="../258891717_428182272148307_7466371206895062396_n.jpg" alt="">
+        </div>
+        <div class="text">
+            <h1>Lorem</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa reprehenderit recusandae ipsam, nihil ea voluptate unde eveniet laudantium cumque praesentium aliquam. 
+                Quis similique quo eaque esse culpa atque quas.</p>
+        </div>
+        <div class=" clear"></div>
+    </div>
+    
 </body>
 </html>
