--- a/index.html
+++ b/index.html
@@ -4,22 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body>
-
-    <div class="container" > 
-        <div class="image">
-            <img src="../258891717_428182272148307_7466371206895062396_n.jpg" alt="">
+    <div class="etseg">
+        <div class="child-1">
+          <img src="./Pictures-of-Elk.jpg" alt="">
         </div>
-        <div class="text">
-            <h1>Lorem</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa reprehenderit recusandae ipsam, nihil ea voluptate unde eveniet laudantium cumque praesentium aliquam. 
-                Quis similique quo eaque esse culpa atque quas.</p>
+        <div class="child-2">
+            <h1>Text</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore magni in impedit commodi quia fugit quaerat nihil nulla? Sapiente beatae molestias cupiditate illum fuga, 
+                minima eum corporis nobis qui voluptatem?</p>
         </div>
-        <div class=" clear"></div>
+        <div class="clr"></div>
+        <div class="big-text">
+            <h1>Titel</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur odit veniam cumque aut, quae, libero reprehenderit mollitia vel doloribus itaque neque dolorum eum dignissimos iusto aspernatur ratione hic. Incidunt, modi?</p>
+        </div>
+        <div class="second">
+            <div class="picture child-1">
+               <img src="/Pictures-of-Elk.jpg" alt="">
+            </div>
+            <div class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores nisi autem! Facilis blanditiis est numquam quod accusamus ad, harum corrupti autem at tempore quaerat ullam doloremque aut atque laborum!
+            </div>
+        </div>
+        <div class="clr"></div>
+        <div class="second-two">
+            <div class="pictur ">
+               <img src="/Pictures-of-Elk.jpg" alt="">
+            </div>
+            <div class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores nisi autem! Facilis blanditiis est numquam quod accusamus ad, harum corrupti autem at tempore quaerat ullam doloremque aut atque laborum!
+            </div>
+        </div>
+        <div class="clr"></div>
     </div>
-    
+   
+
 </body>
 </html>
