--- a/index.html
+++ b/index.html
@@ -5,43 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
-    <div class="etseg">
-        <div class="child-1">
-          <img src="./Pictures-of-Elk.jpg" alt="">
-        </div>
-        <div class="child-2">
-            <h1>Text</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore magni in impedit commodi quia fugit quaerat nihil nulla? Sapiente beatae molestias cupiditate illum fuga, 
-                minima eum corporis nobis qui voluptatem?</p>
-        </div>
-        <div class="clr"></div>
-        <div class="big-text">
-            <h1>Titel</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur odit veniam cumque aut, quae, libero reprehenderit mollitia vel doloribus itaque neque dolorum eum dignissimos iusto aspernatur ratione hic. Incidunt, modi?</p>
-        </div>
-        <div class="second">
-            <div class="picture child-1">
-               <img src="/Pictures-of-Elk.jpg" alt="">
-            </div>
-            <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores nisi autem! Facilis blanditiis est numquam quod accusamus ad, harum corrupti autem at tempore quaerat ullam doloremque aut atque laborum!
-            </div>
-        </div>
-        <div class="clr"></div>
-        <div class="second-two">
-            <div class="pictur ">
-               <img src="/Pictures-of-Elk.jpg" alt="">
-            </div>
-            <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores nisi autem! Facilis blanditiis est numquam quod accusamus ad, harum corrupti autem at tempore quaerat ullam doloremque aut atque laborum!
-            </div>
-        </div>
-        <div class="clr"></div>
+<nav>
+    <div class="logo">
+        <img src="/img/logo-white.png" alt="">
     </div>
-   
-
+    <div class="menu">
+         <div class="search desc-menu">
+            <i class="fas fa-search"></i>
+         </div>
+         <div class="film desc-menu">
+            <i class="fas fa-film"></i>
+         </div>
+         <div class="bars desc-menu">
+            <i class="fas fa-bars"></i>
+         </div>
+    </div>
+</nav>
 </body>
 </html>
