--- a/index.html
+++ b/index.html
@@ -15,15 +15,28 @@
     </div>
     <div class="menu">
          <div class="search desc-menu">
-            <i class="fas fa-search"></i>
+           <label for=""> <i class="fas fa-search"></i></label>
          </div>
          <div class="film desc-menu">
-            <i class="fas fa-film"></i>
+            <label for=""><i class="fas fa-film"></i></label>
          </div>
          <div class="bars desc-menu">
-            <i class="fas fa-bars"></i>
+           <label for="checkbox"> <i class="fas fa-bars"></i></label>
+           <input type="checkbox" id="checkbox"> 
+           <div class="tses">
+                <ul>
+                    <li>нэвтрах</li>
+                    <li>хандивын нөхцөл</li>
+                    <li>холбоо барих</li>
+                    <li>анимэ хуваарь</li>
+                    <li>үзэлт</li>
+                </ul>
+            </div>
          </div>
     </div>
+
 </nav>
+
+
 </body>
 </html>
